// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Password/> Snapshot 1`] = `
<div>
  <h1>
    Password
  </h1>
  <h3>
    Password Settings
  </h3>
  <div
    class="form-group col-sm-12 offset-lg-1 col-lg-10"
  >
    <label
      for="1"
    >
      Current Foris password
    </label>
    <div
      class="input-group"
    >
      <input
        autocomplete="new-password"
        class="form-control"
        id="1"
        type="password"
        value=""
      />
      <div
        class="input-group-append"
      >
        <button
          class="input-group-text"
          type="button"
        >
          <i
            class="fa fa-eye"
          />
        </button>
      </div>
    </div>
  </div>
  <form>
    <h4>
      Foris Password
    </h4>
    <p>
      Set your password for this administration interface.
    </p>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="2"
      >
        New Foris password
      </label>
      <div
        class="input-group"
      >
        <input
          autocomplete="new-password"
          class="form-control  is-invalid"
          id="2"
          type="password"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa fa-eye"
            />
          </button>
        </div>
      </div>
      <div
        class="invalid-feedback"
      >
        Password can't be empty.
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="3"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="3"
        >
          Use same password for advanced administration (root)
          <small
            class="form-text text-muted"
          >
            Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
          </small>
        </label>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <form>
    <h4>
      Advanced Administration (root) Password
    </h4>
    <p>
      In order to access the advanced configuration options which are not available here, you must
set the root user's password. The advanced configuration options can be managed either 
through the 
      <a
        href="%s"
      >
        LuCI web interface
      </a>
       or via SSH.
    </p>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="4"
      >
        New advanced administration password
      </label>
      <div
        class="input-group"
      >
        <input
          autocomplete="new-password"
          class="form-control  is-invalid"
          id="4"
          type="password"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa fa-eye"
            />
          </button>
        </div>
      </div>
      <div
        class="invalid-feedback"
      >
        Password can't be empty.
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
      type="submit"
    >
       
       
      Save
    </button>
  </form>
</div>
`;

exports[`<Password/> Snapshot: same password for root 1`] = `
<div>
  <h1>
    Password
  </h1>
  <h3>
    Password Settings
  </h3>
  <div
    class="form-group col-sm-12 offset-lg-1 col-lg-10"
  >
    <label
      for="1"
    >
      Current Foris password
    </label>
    <div
      class="input-group"
    >
      <input
        autocomplete="new-password"
        class="form-control"
        id="1"
        type="password"
        value=""
      />
      <div
        class="input-group-append"
      >
        <button
          class="input-group-text"
          type="button"
        >
          <i
            class="fa fa-eye"
          />
        </button>
      </div>
    </div>
  </div>
  <form>
    <h4>
      Foris Password
    </h4>
    <p>
      Set your password for this administration interface.
    </p>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="2"
      >
        New Foris password
      </label>
      <div
        class="input-group"
      >
        <input
          autocomplete="new-password"
          class="form-control  is-invalid"
          id="2"
          type="password"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa fa-eye"
            />
          </button>
        </div>
      </div>
      <div
        class="invalid-feedback"
      >
        Password can't be empty.
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="3"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="3"
        >
          Use same password for advanced administration (root)
          <small
            class="form-text text-muted"
          >
            Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
          </small>
        </label>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
      type="submit"
    >
       
       
      Save
    </button>
  </form>
</div>
`;
